--- a/signup.html
+++ b/signup.html
@@ -10,11 +10,11 @@
         <header id="header">
             <div id="logoname">
                 <img id="logo" src="icons/plusheart.png"/>
-                <h3 id="name"><a href="home.html">Drug Drop</a></h3>
+                <h3 id="name"><a href="index.html">Drug Drop</a></h3>
             </div>
             
             <nav id="nav1">
-                <a href="home.html">
+                <a href="index.html">
                     <span id="home">Home</span>
                 </a>
 
@@ -189,7 +189,7 @@
             <a href="faq.html">
                 <span id="n2faq" class="navi">FAQ</span>
             </a>
-            <a href="home.html">
+            <a href="index.html">
                 <span id="n2home" class="navi">Home</span>
             </a>
             <a href="shop.html" class="navi">
